[package]
name = "spectre_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
colored = "2"
warp = "0.3"           # The Web Server
serde = { version = "1.0", features = ["derive"] } # For JSON
serde_json = "1.0"
futures = "0.3"        # For WebSocket handling